package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"net/http"
	_ "net/http/pprof" // Import pprof for diagnostic info

	// Added if needed later, but focusing on pprof now
	"google.golang.org/grpc"
	"google.golang.org/protobuf/proto"

	"game-chat-service/internal/config"
	"game-chat-service/internal/hub"
	"game-chat-service/internal/logger"
	"game-chat-service/internal/repository"
	"game-chat-service/internal/service"
	"game-chat-service/internal/transport"
	"game-pkg/mq"

	"game-protocols/chat"
)

type grpcServer struct {
	chat.UnimplementedChatServiceServer
	svc *service.ChatService
}

func main() {
	// Initialize logger first
	logger.Init()
	// Enable debug logging for troubleshooting
	logger.SetLevel(logger.DEBUG)
	logger.EnableTag(logger.TagService)
	logger.EnableTag(logger.TagMQ)
	// Disable noisy logs
	logger.DisableTag(logger.TagDB)
	logger.DisableTag(logger.TagTransport)

	// 1. Load Config
	cfg, err := config.Load()
	if err != nil {
		log.Fatalf("Config error: %v", err)
	}

	// ğŸ†• Enable pprof in non-prod environment
	if cfg.Server.Env != "prod" {
		go func() {
			pprofPort := 6061 // Use different port for chat service pprof
			log.Printf("ğŸ“Š Starting pprof server on :%d", pprofPort)
			if err := http.ListenAndServe(fmt.Sprintf(":%d", pprofPort), nil); err != nil {
				log.Printf("âš ï¸ pprof server failed: %v", err)
			}
		}()
	}

	// 2. Init DB & Redis
	db, err := repository.NewDatabase(cfg.Database.DSN)
	if err != nil {
		log.Printf("DB Connect error: %v", err)
	}

	rdb, err := repository.NewRedisClient(cfg.Redis.Addr, cfg.Redis.Password)
	if err != nil {
		log.Printf("Redis Connect error: %v", err)
	}

	// 3. Init Core
	h := hub.NewHub(rdb)

	// Initialize MQ
	var redisMQ interface {
		mq.Producer
		mq.Consumer
	}

	switch cfg.MQ.Type {
	case "robustmq":
		log.Println("ğŸš€ Using RobustMQ (MQTT)")
		redisMQ = mq.NewRobustMQ(&mq.RobustMQConfig{
			Broker:   cfg.MQ.RobustMQ.Broker,
			ClientID: cfg.MQ.RobustMQ.ClientID,
			Username: cfg.MQ.RobustMQ.Username,
			Password: cfg.MQ.RobustMQ.Password,
		})
	case "redis":
		fallthrough
	default:
		log.Println("ğŸš€ Using Redis MQ")
		redisMQ = mq.NewRedisMQ(rdb.Client)
	}

	// Initialize ChatService
	svc := service.NewChatService(h, db)
	svc.SetProducer(redisMQ)

	// ğŸ†• 6. Start Redis Consumer (for Gateway incoming requests)
	requestChan, err := redisMQ.Subscribe("game:request:mmo") // Topic convention
	if err != nil {
		log.Fatalf("Failed to subscribe to requests: %v", err)
	}

	go func() {
		log.Println("ğŸ§ Started listening for Redis requests on game:request:mmo")
		for msg := range requestChan {
			// å¹¶å‘å¤„ç†æ¯ä¸ªè¯·æ±‚
			go func(m *mq.Message) {
				var req chat.ChatRequest
				if err := proto.Unmarshal(m.Payload, &req); err != nil {
					log.Printf("Failed to unmarshal request: %v", err)
					return
				}

				// å¤„ç†è¯·æ±‚
				resp, err := svc.HandleRequest(context.Background(), &req)
				if err != nil {
					log.Printf("HandleRequest error: %v", err)
					// TODO: Send error response?
					return
				}

				// å‘é€ ACK å“åº” (å‘ç»™å‘é€è€…)
				if resp != nil {
					// è·¯ç”±ä¿¡æ¯
					resp.TargetUserId = req.Base.UserId

					respBytes, err := proto.Marshal(resp)
					if err == nil {
						// è¿™é‡Œçš„ "broadcast" å…¶å®æ˜¯ "gateway_downstream" çš„æ„æ€
						// æ‰€æœ‰çš„ Gateway éƒ½ä¼šæ”¶åˆ°å¹¶è·¯ç”±
						if err := redisMQ.Publish("broadcast", respBytes); err != nil {
							log.Printf("Failed to publish ACK: %v", err)
						}
					}
				}
			}(msg)
		}
	}()

	// 4. Start WebSocket Server (for Gateway incoming requests)
	wsSrv := transport.NewWSServer(cfg.Server.Port, svc)

	go func() {
		if err := wsSrv.Start(); err != nil {
			log.Fatalf("WS Server failed: %v", err)
		}
	}()

	// 5. Start gRPC Server
	lis, err := net.Listen("tcp", fmt.Sprintf(":%d", cfg.Server.GrpcPort))
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}

	s := grpc.NewServer()
	chat.RegisterChatServiceServer(s, &grpcServer{svc: svc})

	log.Printf("Chat Service listening - WS on :%d, gRPC on :%d", cfg.Server.Port, cfg.Server.GrpcPort)
	if err := s.Serve(lis); err != nil {
		log.Fatalf("failed to serve: %v", err)
	}
}
