package service

import (
	"context"
	"fmt"
	"log"
	"time"

	"game-chat-service/internal/hub"
	"game-chat-service/internal/mq" // New import
	"game-chat-service/internal/repository"
	"game-protocols/chat"

	"google.golang.org/protobuf/proto"
)

type ChatService struct {
	hub      *hub.Hub
	db       *repository.Database
	producer mq.Producer // Changed from GatewaySender
}

func NewChatService(h *hub.Hub, db *repository.Database) *ChatService {
	return &ChatService{
		hub: h,
		db:  db,
	}
}

// SetProducer sets the MQ Producer (e.g. Redis)
func (s *ChatService) SetProducer(p mq.Producer) {
	s.producer = p
}

// HandleRequest processes the incoming chat request from Gateway (or Client via Gateway)
func (s *ChatService) HandleRequest(ctx context.Context, req *chat.ChatRequest) (*chat.ChatResponse, error) {
	startTime := time.Now()
	messageID := fmt.Sprintf("%d->%d:%s", req.Base.UserId, req.ReceiverId, req.Content[:min(20, len(req.Content))])

	log.Printf("ğŸ“¥ [RECV] Message received | From: %d, To: %d, Content: %s, MsgID: %s",
		req.Base.UserId, req.ReceiverId, req.Content[:min(50, len(req.Content))], messageID)

	// 1. Persistence
	dbStart := time.Now()
	msgID, err := s.db.SaveMessage(ctx, req)
	if err != nil {
		log.Printf("âŒ [DB-ERROR] Failed to save message | MsgID: %s, Error: %v", messageID, err)
		return nil, fmt.Errorf("persistence failed: %w", err)
	}
	log.Printf("ğŸ’¾ [DB-OK] Message saved | MsgID: %s, DBTime: %v", messageID, time.Since(dbStart))

	// 2. Routing logic (via Hub)
	s.hub.HandleMessage(ctx, req)

	// Response for Sender (ACK)
	resp := &chat.ChatResponse{
		Base:      req.Base,
		Success:   true,
		MessageId: msgID,
		Timestamp: time.Now().Unix(),

		// ğŸ†• è·¯ç”±ä¿¡æ¯ï¼šå‘å›ç»™å‘é€è€…
		TargetUserId: req.Base.UserId,
	}

	log.Printf("âœ… [ACK-PREPARE] Response ready for sender | To: %d, MsgID: %s", req.Base.UserId, messageID)

	// If private chat, forward to Receiver as well
	// If private chat, forward to Receiver as well
	if req.ReceiverId != 0 && s.producer != nil {
		broadcast := &chat.MessageBroadcast{
			MessageId: msgID,
			SenderId:  req.Base.UserId,
			Content:   req.Content,
			Type:      req.Type,
			Timestamp: req.Base.Timestamp,

			// ğŸ†• è·¯ç”±ä¿¡æ¯ï¼šå‘Šè¯‰ Gateway å‘ç»™è°
			TargetUserId: req.ReceiverId,
		}

		log.Printf("ğŸ“¤ [BROADCAST-START] Preparing broadcast | From: %d, To: %d, MsgID: %s",
			req.Base.UserId, req.ReceiverId, messageID)

		// ç›´æ¥åºåˆ—åŒ–å¹¶å‘é€ï¼ˆä¸åŒ…è£… Envelopeï¼‰
		broadcastBytes, err := proto.Marshal(broadcast)
		if err != nil {
			log.Printf("âŒ [MARSHAL-ERROR] Failed to marshal broadcast | MsgID: %s, Error: %v", messageID, err)
		} else {
			sendStart := time.Now()
			// ä½¿ç”¨ Redis å‘å¸ƒ
			if err := s.producer.Publish("broadcast", broadcastBytes); err != nil {
				log.Printf("âŒ [SEND-ERROR] Failed to send broadcast | MsgID: %s, Error: %v", messageID, err)
			} else {
				log.Printf("âœ… [BROADCAST-OK] Broadcast sent via Redis | To: %d, Size: %d bytes, SendTime: %v, MsgID: %s",
					req.ReceiverId, len(broadcastBytes), time.Since(sendStart), messageID)
			}
		}
	}

	totalTime := time.Since(startTime)
	log.Printf("â±ï¸  [COMPLETE] Message processing complete | MsgID: %s, TotalTime: %v", messageID, totalTime)

	return resp, nil
}

func min(a, b int) int {
	if a < b {
		return a
	}
	return b
}
