package transport

import (
	"context"
	"fmt"
	"log"
	"net/http"
	"sync"

	"github.com/gorilla/websocket"
	"google.golang.org/protobuf/proto"

	"game-chat-service/internal/service"
	"game-protocols/chat"
)

type WSServer struct {
	addr     string
	svc      *service.ChatService
	upgrader websocket.Upgrader

	// Active connection to Gateway (Simplified: assumption 1 active gateway conn)
	activeConn *websocket.Conn
	writeChan  chan []byte // å†™å…¥é˜Ÿåˆ—ï¼Œé¿å…å¹¶å‘å†™å…¥
	mu         sync.Mutex
}

func NewWSServer(port int, svc *service.ChatService) *WSServer {
	return &WSServer{
		addr: fmt.Sprintf(":%d", port),
		svc:  svc,
		upgrader: websocket.Upgrader{
			ReadBufferSize:  4096,
			WriteBufferSize: 4096,
			CheckOrigin: func(r *http.Request) bool {
				return true
			},
		},
	}
}

func (s *WSServer) Start() error {
	http.HandleFunc("/", s.handleConnection) // Gateway connects to root
	log.Printf("Chat Service (WS) listening on %s", s.addr)
	return http.ListenAndServe(s.addr, nil)
}

// SendToGateway å‘é€çº¯ Protobuf æ•°æ®åˆ° Gateway
// ä¸å†ä½¿ç”¨ Envelope åŒ…è£…
func (s *WSServer) SendToGateway(data []byte) error {
	s.mu.Lock()
	writeChan := s.writeChan
	s.mu.Unlock()

	if writeChan == nil {
		return fmt.Errorf("no active gateway connection")
	}

	log.Printf("WSServer.SendToGateway: Sending %d bytes to Gateway", len(data))

	// é€šè¿‡å†™å…¥é˜Ÿåˆ—å‘é€ï¼Œé¿å…å¹¶å‘å†™å…¥
	select {
	case writeChan <- data:
		return nil
	default:
		return fmt.Errorf("write channel full")
	}
}

func (s *WSServer) handleConnection(w http.ResponseWriter, r *http.Request) {
	conn, err := s.upgrader.Upgrade(w, r, nil)
	if err != nil {
		log.Println("Upgrade error:", err)
		return
	}

	// åˆ›å»ºå†™å…¥é˜Ÿåˆ—
	writeChan := make(chan []byte, 100)

	s.mu.Lock()
	s.activeConn = conn
	s.writeChan = writeChan
	s.mu.Unlock()

	defer func() {
		s.mu.Lock()
		if s.activeConn == conn {
			s.activeConn = nil
			s.writeChan = nil
		}
		s.mu.Unlock()
		close(writeChan)
		conn.Close()
	}()

	// å¯åŠ¨å†™å…¥ pumpï¼Œä¸“é—¨è´Ÿè´£å†™å…¥æ“ä½œ
	done := make(chan struct{})
	go func() {
		defer close(done)
		for data := range writeChan {
			if err := conn.WriteMessage(websocket.BinaryMessage, data); err != nil {
				log.Printf("Write error: %v", err)
				return
			}
			log.Printf("WritePump: Successfully wrote %d bytes to Gateway", len(data))
		}
	}()

	for {
		_, message, err := conn.ReadMessage()
		if err != nil {
			if websocket.IsUnexpectedCloseError(err, websocket.CloseGoingAway, websocket.CloseAbnormalClosure) {
				log.Printf("WS error: %v", err)
			}
			break
		}

		// ğŸ¯ æ–°æ¶æ„ï¼šç›´æ¥è§£æ ChatRequest (çº¯ Protobuf)
		// Gateway å·²ç»æå–äº† Payload å¹¶è½¬å‘ç»™æˆ‘ä»¬
		var req chat.ChatRequest
		if err := proto.Unmarshal(message, &req); err != nil {
			log.Printf("Failed to unmarshal ChatRequest: %v", err)
			continue
		}

		log.Printf("Received ChatRequest from User %d to User %d: %s",
			req.Base.UserId, req.ReceiverId, req.Content)

		// Handle Request
		resp, err := s.svc.HandleRequest(context.Background(), &req)
		if err != nil {
			log.Printf("Handle error: %v", err)
			continue
		}

		// Send Response (çº¯ Protobuf ChatResponse)
		if resp != nil {
			respBytes, err := proto.Marshal(resp)
			if err != nil {
				log.Printf("Marshal response error: %v", err)
				continue
			}

			// é€šè¿‡å†™å…¥é˜Ÿåˆ—å‘é€ï¼ˆä¸ç›´æ¥å†™å…¥ï¼‰
			select {
			case writeChan <- respBytes:
				log.Printf("Queued ChatResponse to Gateway (%d bytes)", len(respBytes))
			default:
				log.Printf("Write channel full, dropping response")
			}
		}
	}

	// ç­‰å¾…å†™å…¥å®Œæˆ
	<-done
}
